# tetris-gen

./: Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  self-destruct.sh  tetris.py
.github/workflows/: codeql.yml
public/: index.html
public/css/: style.css
public/js/: api.js  audio.js  auth.js  board.js  constants.js  game.js  gesture.js  input.js  leaderboard.js  main.js  piece.js  renderer.js  scoring.js
server/: Cargo.toml  Dockerfile  auth.js  db.js  index.js  package.json
server/migrations/: 001_create_users.sql  002_create_scores.sql
server/routes/: auth.js  scores.js
server/src/: config.rs  error.rs  main.rs  middleware.rs  models.rs
server/src/routes/: auth.rs  mod.rs  scores.rs  self_destruct.rs
