[package]
name = "tetris-gen-api"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-cors = "0.7"
actix-governor = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
